# cogai_dementia_prediction

./: .gitignore  README.md  README_multilingual.md  analyze_corpus.py  analyze_dataset.py  check_files.py  create_training_dataset.py  dataset.py  dataset_multilanguage.py  dataset_multilingual.py  inference_multilingual.py  main.py  main_multilingual.py  models.py  models_multilingual.py  pyproject.toml  quick_test.py  reorganize_dataset.py  requirements.txt  requirements_multilingual.txt  run_all_languages.sh  run_cross_lingual.sh  simple_test.py  test_data_loading.py  visualize.ipynb
comparisons/: trainAudioModel.py  trainAudioModelMlf.py  trainMultimodal.py  trainTextModel.py  train_audio_lightning.py
controlgroups/: README.md  __init__.py  config.py  data_processor.py  models.py  requirements.txt  run_all_control_groups.sh  run_all_siglip_control_groups.sh  run_audio_only_en_cn.sh  run_concat_en_cn.sh  run_siglip_audio_only_en_cn.sh  run_siglip_concat_en_cn.sh  run_siglip_text_only_en_cn.sh  run_text_only_en_cn.sh  siglip_control_models.py  train_audio_only.py  train_concat.py  train_siglip_audio_only.py  train_siglip_concat.py  train_siglip_text_only.py  train_text_only.py
models/: multimodal.py
preprocess/: getMetadata.py  mp3towav.py  preProcessAudio.py  preProcessTexto.py
siglip-sam/: README.md  config.py  data_processor.py  language_parsers.py  model.py  requirements.txt  run_all.sh  run_all_cross_lingual_experiments.sh  run_all_true_siglip2_cross_lingual_3to1.sh  run_sam_experiments.sh  sam_optimizer.py  test_data_parsing.py  train_sam_all_languages.sh  (+21 more)
(+64 files in other folders)
