[project]
name = "dementiaprediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "librosa>=0.11.0",
    "mlflow>=2.22.0",
    "numpy>=2.2.6",
    "pillow>=11.2.1",
    "scikit-learn>=1.6.1",
    "transformers>=4.51.3",
]
